--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>React App</title>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/6.23.1/babel.min.js">
+  </script>
 </head>
 <body>
   <div id="root"></div>
